kube/ghost-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost-deployment
  labels:
    app: ghost
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
        - name: ghost
          image: ghost:2.31-alpine
          ports:
            - containerPort: 2368
---
apiVersion: v1
kind: Service
metadata:
  name: ghost-service
spec:
  ports:
    - port: 2368
  selector:
    run: horizon
  type: NodePort
