kube/ghost.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost-deployment
  labels:
    app: ghost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
        - name: ghost
          image: ghost:2.31-alpine
          ports:
            - containerPort: 2368
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/ghost/content
              name: ghost-storage
      volumes:
        - name: ghost-storage
          persistentVolumeClaim:
            claimName: ghost-storage
---
apiVersion: v1
kind: Service
metadata:
  name: ghost-service
spec:
  ports:
    - port: 2368
  selector:
    app: ghost
  type: NodePort
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ghost-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    certmanager.k8s.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
    - hosts:
        - lavatoaster.adamlav.in
      secretName: letsencrypt-staging
  rules:
    - host: lavatoaster.adamlav.in
      http:
        paths:
          - backend:
              serviceName: ghost-service
              servicePort: 2368
